Добавлена сущность rating; Добавлен вывод среднего значения рейтинга книги
