# internal/docs/swagger.yaml
@@ -50,6 +50,8 @@ definitions:
         type: string
       publisher:
         type: string
+      rating:
+        type: number
       title:
         type: string
       year:
@@ -90,6 +92,13 @@ definitions:
         type: string
       refresh_token:
         type: string
+    type: object
+  dto.RatingRequest:
+    properties:
+      book_id:
+        type: string
+      stars:
+        type: integer
     type: object
   dto.SignUpResponse:
     properties:
@@ -655,6 +664,83 @@ paths:
       summary: Удалить жанр книги
       tags:
       - genres
+  /ratings:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Данные жанра
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RatingRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Оценить книгу
+      tags:
+      - ratings
+  /ratings/{book_id}:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID книги
+        in: path
+        name: book_id
+        required: true
+        type: string
+      - description: Данные рейтинга
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RatingRequest'
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Удалить оценку
+      tags:
+      - ratings
   /users/{id}:
     get:
       parameters:
