# internal/dto/rating.go
@@ -1,0 +1,6 @@
+package dto
+
+type RatingRequest struct {
+	Stars  int    `json:"stars"`
+	BookId string `json:"book_id"`
+}
