# internal/entities/rating.go
@@ -1,0 +1,8 @@
+package entities
+
+type Rating struct {
+	Id     string
+	Stars  int
+	UserId string
+	BookId string
+}
